--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CV</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+  <main class="main">
+    <section class="top">
+      <div class="content">
+        <div class="top__content">
+          <figure class="picture">
+            <img class="picture__photo" src="./photo1.jpg" alt="photo">
+          </figure>
+          <div class="top__text">
+            <div class="top__title">
+              <h5>I'M</h5>
+              <h1>Yury Borovikov</h1>
+              <h5>Future developer</h5>
+            </div>
+            <div class="top__sub-title">Hello everyone! This is a junior JavaScript developer's resume.</div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+
+  </main>
 </body>
+
 </html>
