feat: add block social links

--- a/index.html
+++ b/index.html
@@ -27,12 +27,26 @@
               <h5>Future developer</h5>
             </div>
             <div class="top__sub-title">Hello everyone! This is a junior JavaScript developer's resume.</div>
+
+            <div class="social">
+              <ul class="social__list">
+                <li class="social__item">
+                  <a target="_blank" class="social__link social__link--github" href="https://github.com/yurkab24"></a>
+                </li>
+                <li class="social__item">
+                  <a class="social__link social__link--phone" href="tel:375296707763"></a>
+                </li>
+                <li class="social__item">
+                  <a target="_blacnk" class="social__link social__link--inst" href="https://www.instagram.com/yura.b0/"></a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
       </div>
     </section>
-
+    
   </main>
 </body>
 
