--- a/index.html
+++ b/index.html
@@ -46,7 +46,29 @@
       </div>
       </div>
     </section>
-    
+    <section class="about">
+      <div class="content">
+        <h2 class="title"><span class="title__color">About</span> Me</h2>
+        <div class="about__content">
+          <div class="about__block">
+            <p class="about__text">I'm an electrician by education:) But I really want to change my profession to a web developer. I like to develop as a programmer. I have a little knowledge of html, css and javascript.</p>
+            <p class="about__text">At the moment my English is pretty terrible:) But I'm working on it</p>
+          </div>
+          <div class="about__block about__block--grid">
+            <ul class="about__list">
+              <li class="about__item">First Name: <span class="about__item-color">Yury</span></li>
+              <li class="about__item">Last Name: <span class="about__item-color">Borovikov</span></li>
+              <li class="about__item">Birthday: <span class="about__item-color">24.07.1990</span></li>
+              <li class="about__item">Age: <span class="about__item-color">31</span></li>
+            </ul>
+            <ul class="about__list">
+              <li class="about__item">Country: <span class="about__item-color">Belarus</span></li>
+              <li class="about__item">City: <span class="about__item-color">Gomel</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
