feat: add block skills

--- a/index.html
+++ b/index.html
@@ -15,35 +15,36 @@
 <body>
   <main class="main">
     <section class="top">
-      <div class="content">
-        <div class="top__content">
-          <figure class="picture">
-            <img class="picture__photo" src="./photo1.jpg" alt="photo">
-          </figure>
-          <div class="top__text">
-            <div class="top__title">
-              <h5>I'M</h5>
-              <h1>Yury Borovikov</h1>
-              <h5>Future developer</h5>
-            </div>
-            <div class="top__sub-title">Hello everyone! This is a junior JavaScript developer's resume.</div>
 
-            <div class="social">
-              <ul class="social__list">
-                <li class="social__item">
-                  <a target="_blank" class="social__link social__link--github" href="https://github.com/yurkab24"></a>
-                </li>
-                <li class="social__item">
-                  <a class="social__link social__link--phone" href="tel:375296707763"></a>
-                </li>
-                <li class="social__item">
-                  <a target="_blacnk" class="social__link social__link--inst" href="https://www.instagram.com/yura.b0/"></a>
-                </li>
-              </ul>
-            </div>
+      <div class="top__content">
+        <figure class="picture">
+          <img class="picture__photo" src="./photo1.jpg" alt="photo">
+        </figure>
+        <div class="top__text">
+          <div class="top__title">
+            <h5>I'M</h5>
+            <h1>Yury Borovikov</h1>
+            <h5>Future developer</h5>
+          </div>
+          <div class="top__sub-title">Hello everyone! This is a junior JavaScript developer's resume.</div>
+
+          <div class="social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a target="_blank" class="social__link social__link--github" href="https://github.com/yurkab24"></a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--phone" href="tel:375296707763"></a>
+              </li>
+              <li class="social__item">
+                <a target="_blacnk" class="social__link social__link--inst"
+                  href="https://www.instagram.com/yura.b0/"></a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+
       </div>
     </section>
     <section class="about">
@@ -51,7 +52,8 @@
         <h2 class="title"><span class="title__color">About</span> Me</h2>
         <div class="about__content">
           <div class="about__block">
-            <p class="about__text">I'm an electrician by education:) But I really want to change my profession to a web developer. I like to develop as a programmer. I have a little knowledge of html, css and javascript.</p>
+            <p class="about__text">I'm an electrician by education:) But I really want to change my profession to a web
+              developer. I like to develop as a programmer. I have a little knowledge of html, css and javascript.</p>
             <p class="about__text">At the moment my English is pretty terrible:) But I'm working on it</p>
           </div>
           <div class="about__block about__block--grid">
@@ -66,6 +68,31 @@
               <li class="about__item">City: <span class="about__item-color">Gomel</span></li>
             </ul>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="skills">
+      <div class="content">
+        <h2 class="title"><span class="title__color">My</span> skills</h2>
+        <div class="skills__content">
+          <ul class="skills__list">
+            <li class="skills__item">
+              <div class="skills__name">HTML</div>
+              <div class="scills__line scills__line--html"></div>
+            </li>
+            <li class="skills__item">
+              <div class="skills__name">CSS</div>
+              <div class="scills__line scills__line--css"></div>
+            </li>
+            <li class="skills__item">
+              <div class="skills__name">JavaScript</div>
+              <div class="scills__line scills__line--js"></div>
+            </li>
+            <li class="skills__item">
+              <div class="skills__name">PHP</div>
+              <div class="scills__line scills__line--php"></div>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
