feat: add menu test

--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
 
 <body>
   <main class="main">
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__item"><a class="menu__link" href="#">Main</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Skils</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Education</a></li>
+      </ul>
+    </nav>
     <section class="top">
-
       <div class="top__content">
         <figure class="picture">
           <img class="picture__photo" src="./photo1.jpg" alt="photo">
@@ -71,31 +78,35 @@
         </div>
       </div>
     </section>
+
     <section class="skills">
       <div class="content">
         <h2 class="title"><span class="title__color">My</span> skills</h2>
+        <h3 class="sub-title">I have only basic knowledge</h3>
         <div class="skills__content">
           <ul class="skills__list">
             <li class="skills__item">
-              <div class="skills__name">HTML</div>
+              <h6 class="skills__name">HTML</h6>
               <div class="scills__line scills__line--html"></div>
             </li>
             <li class="skills__item">
-              <div class="skills__name">CSS</div>
+              <h6 class="skills__name">CSS</h6>
               <div class="scills__line scills__line--css"></div>
             </li>
             <li class="skills__item">
-              <div class="skills__name">JavaScript</div>
+              <h6 class="skills__name">JavaScript</h6>
               <div class="scills__line scills__line--js"></div>
             </li>
             <li class="skills__item">
-              <div class="skills__name">PHP</div>
+              <h6 class="skills__name">PHP</h6>
               <div class="scills__line scills__line--php"></div>
             </li>
           </ul>
         </div>
       </div>
     </section>
+
+    
   </main>
 </body>
 
