feat: add block education

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <li class="menu__item"><a class="menu__link" href="#">About</a></li>
         <li class="menu__item"><a class="menu__link" href="#">Skils</a></li>
         <li class="menu__item"><a class="menu__link" href="#">Education</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Portfolio</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Сode examples</a></li>
       </ul>
     </nav>
     <section class="top">
@@ -61,7 +63,7 @@
           <div class="about__block">
             <p class="about__text">I'm an electrician by education:) But I really want to change my profession to a web
               developer. I like to develop as a programmer. I have a little knowledge of html, css and javascript.</p>
-            <p class="about__text">At the moment my English is pretty terrible:) But I'm working on it</p>
+            <p class="about__text">At the moment my English is pretty terrible:) But I'm working on it.</p>
           </div>
           <div class="about__block about__block--grid">
             <ul class="about__list">
@@ -106,6 +108,19 @@
       </div>
     </section>
 
+    <section class="education">
+      <div class="content">
+        <h2 class="title"><span class="title__color">My</span> education</h2>
+        <div class="education__content">
+          <h3 class="sub-title">I took several courses</h3>
+          <ul class="education__list">
+            <li class="education__item">RS School Stage0</li>
+            <li class="education__item">Skillbox</li>
+            <li class="education__item">HTML Academy</li>
+          </ul>
+        </div>
+      </div>
+    </section>
     
   </main>
 </body>
