refactor: change name blocks

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <section class="skills">
       <div class="content">
-        <h2 class="title"><span class="title__color">My</span> skills</h2>
+        <h2 class="title"><span class="title__color">S</span>kills</h2>
         <h3 class="sub-title">I have only basic knowledge</h3>
         <div class="skills__content">
           <ul class="skills__list">
@@ -109,7 +109,7 @@
 
     <section class="education">
       <div class="content">
-        <h2 class="title"><span class="title__color">My</span> education</h2>
+        <h2 class="title"><span class="title__color">E</span>ducation</h2>
         <div class="education__content">
           <h3 class="sub-title">I took several courses</h3>
           <ul class="education__list">
