feat: add block portfolio

--- a/index.html
+++ b/index.html
@@ -159,6 +159,26 @@ function stray(numbers) {
       </div>
     </section>
 
+    <section class="portfolio">
+      <div class="content">
+        <h2 class="title"><span class="title__color">P</span>ortfolio</h2>
+        <h3 class="sub-title">Examples of work</h3>
+        <div class="portfolio__content">
+
+          <div class="portfolio__item">
+            <h4 class="sub-title sub-title--portfolio"><a class="portfolio__name" target="_blank" href="https://rolling-scopes-school.github.io/yurkab24-JSFEPRESCHOOL/js-clock/">JS-Clock</a></h4>
+            <img class="portfolio__img" src="./js-clock-img.jpg" alt="JS-Clock">
+          </div>
+
+          <div class="portfolio__item">
+            <h4 class="sub-title sub-title--portfolio"><a class="portfolio__name" target="_blank" href="https://rolling-scopes-school.github.io/yurkab24-JSFEPRESCHOOL/museum/">Museum</a></h4>
+            <img class="portfolio__img" src="./museum-img.jpg" alt="Museum">
+          </div>
+
+        </div>
+      </div>
+    </section>
+
   </main>
 </body>
 
