feat: add description for portfolio

--- a/index.html
+++ b/index.html
@@ -167,12 +167,20 @@ function stray(numbers) {
 
           <div class="portfolio__item">
             <h4 class="sub-title sub-title--portfolio"><a class="portfolio__name" target="_blank" href="https://rolling-scopes-school.github.io/yurkab24-JSFEPRESCHOOL/js-clock/">JS-Clock</a></h4>
-            <img class="portfolio__img" src="./js-clock-img.jpg" alt="JS-Clock">
+            <div class="portfolio__text-block">
+              <div class="portfolio__description">Electronic clock with theme changing function</div>
+              <div class="portfolio__subtitle">HTML, CSS, JS</div>
+            </div>
+            <a href="https://rolling-scopes-school.github.io/yurkab24-JSFEPRESCHOOL/js-clock/" target="_blank"><img class="portfolio__img" src="./js-clock-img.jpg" alt="JS-Clock"></a>
           </div>
 
           <div class="portfolio__item">
             <h4 class="sub-title sub-title--portfolio"><a class="portfolio__name" target="_blank" href="https://rolling-scopes-school.github.io/yurkab24-JSFEPRESCHOOL/museum/">Museum</a></h4>
-            <img class="portfolio__img" src="./museum-img.jpg" alt="Museum">
+            <div class="portfolio__text-block">
+              <div class="portfolio__description">Layout of the museum website</div>
+              <div class="portfolio__subtitle">HTML, CSS</div>
+            </div>
+            <a href="https://rolling-scopes-school.github.io/yurkab24-JSFEPRESCHOOL/museum/" target="_blank"><img class="portfolio__img" src="./museum-img.jpg" alt="Museum"></a>
           </div>
 
         </div>
