feat: add block footer

--- a/index.html
+++ b/index.html
@@ -202,7 +202,12 @@ function stray(numbers) {
 
     <footer class="footer">
       <div class="content">
+        <div class="footer__content">
+          <a class="footer__item school-link" href="https://rs.school/js/"><img src="./rs_school_js.svg" alt="rs_school"></a>
+          <div class="footer__item year">2021</div>
+          <a class="footer__item github-link" href="https://github.com/yurkab24"><img src="./icon-github.svg" alt="icon github"></a>
         </div>
+      </div>
     </footer>
 
   </main>
