--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
   <main class="main">
-    <!-- <nav class="menu">
+    <nav class="menu">
       <ul class="menu__list">
-        <li class="menu__item"><a class="menu__link" href="#">Main</a></li>
-        <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-        <li class="menu__item"><a class="menu__link" href="#">Skils</a></li>
-        <li class="menu__item"><a class="menu__link" href="#">Education</a></li>
-        <li class="menu__item"><a class="menu__link" href="#">Portfolio</a></li>
-        <li class="menu__item"><a class="menu__link" href="#">Сode examples</a></li>
+        <li class="menu__item"><a class="menu__link" href="#about">About</a></li>
+        <li class="menu__item"><a class="menu__link" href="#skills">Skils</a></li>
+        <li class="menu__item"><a class="menu__link" href="#education">Education</a></li>
+        <li class="menu__item"><a class="menu__link" href="#code">Сode examples</a></li>
+        <li class="menu__item"><a class="menu__link" href="#portfolio">Portfolio</a></li>
+        <li class="menu__item"><a class="menu__link" href="#main">Contacts</a></li>
       </ul>
-    </nav> -->
-    <section class="top">
+    </nav>
+    <section class="top" id="top">
       <div class="top__content">
         <figure class="picture">
           <img class="picture__photo" src="./photo1.jpg" alt="photo">
@@ -55,14 +58,13 @@
       </div>
 
     </section>
-    <section class="about">
+    <section class="about" id="about">
       <div class="content">
         <h2 class="title"><span class="title__color">About</span> Me</h2>
         <div class="about__content">
           <div class="about__block">
             <p class="about__text">I'm an electrician by education:) But I really want to change my profession to a web
               developer. I like to develop as a programmer. I have a little knowledge of html, css and javascript.</p>
-            <!-- <p class="about__text">At the moment my English is pretty terrible:) But I'm working on it.</p> -->
           </div>
           <div class="about__block about__block--grid">
             <ul class="about__list">
@@ -80,7 +82,7 @@
       </div>
     </section>
 
-    <section class="skills">
+    <section class="skills" id="skills">
       <div class="content">
         <h2 class="title"><span class="title__color">S</span>kills</h2>
         <h3 class="sub-title">I have only basic knowledge</h3>
@@ -107,7 +109,7 @@
       </div>
     </section>
 
-    <section class="education">
+    <section class="education" id="education">
       <div class="content">
         <h2 class="title"><span class="title__color">E</span>ducation</h2>
         <div class="education__content">
@@ -121,7 +123,7 @@
       </div>
     </section>
 
-    <section class="code">
+    <section class="code" id="code">
       <div class="content">
         <h2 class="title"><span class="title__color">Code</span> examples</h2>
         <div class="code__content">
@@ -130,6 +132,7 @@
 
             <h3 class="sub-title">Array.diff</h3>
             <pre class="code__example">
+              <code class="javascript">
 function arrayDiff(a, b) {
   if (a.length === 0) return [];
   if (b.length === 0) return a;
@@ -140,6 +143,7 @@ function arrayDiff(a, b) {
     }
   });
 }
+              </code>
             </pre>
 
           </div>
@@ -147,12 +151,13 @@ function arrayDiff(a, b) {
 
             <h3 class="sub-title">Find the stray number</h3>
             <pre class="code__example">
+              <code class="javascript">
 function stray(numbers) {
   return numbers.find((n) => {
-    return numbers.indexOf(n)  == numbers.lastIndexOf(n)
-   
+    return numbers.indexOf(n)  == numbers.lastIndexOf(n);
   });
 }
+              </code>
             </pre>
 
           </div>
@@ -160,7 +165,7 @@ function stray(numbers) {
       </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
       <div class="content">
         <h2 class="title"><span class="title__color">P</span>ortfolio</h2>
         <h3 class="sub-title">Examples of work</h3>
@@ -188,7 +193,7 @@ function stray(numbers) {
       </div>
     </section>
 
-    <section class="english">
+    <section class="english" id="english">
       <div class="content">
         <h2 class="title"><span class="title__color">E</span>nglish</h2>
         
@@ -201,7 +206,7 @@ function stray(numbers) {
       </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="content">
         <div class="footer__content">
           <a class="footer__item school-link" href="https://rs.school/js/"><img src="./rs_school_js.svg" alt="rs_school"></a>
