feat: change menu (fix top)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li class="menu__item"><a class="menu__link" href="#education">Education</a></li>
         <li class="menu__item"><a class="menu__link" href="#code">Сode examples</a></li>
         <li class="menu__item"><a class="menu__link" href="#portfolio">Portfolio</a></li>
-        <li class="menu__item"><a class="menu__link" href="#main">Contacts</a></li>
+        <li class="menu__item"><a class="menu__link" href="#top">Contacts</a></li>
       </ul>
     </nav>
     <section class="top" id="top">
@@ -217,6 +217,7 @@ function stray(numbers) {
     </footer>
 
   </main>
+  <script src="./script.js"></script>
 </body>
 
 </html>
