feat: add burger menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 <body>
   <main class="main">
     <nav class="menu">
+      <div class="burger">
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+      </div>
       <ul class="menu__list">
         <li class="menu__item"><a class="menu__link" href="#about">About</a></li>
         <li class="menu__item"><a class="menu__link" href="#skills">Skils</a></li>
